@@ -88,7 +88,9 @@
 			compatibility, "yes" is a synonym for "local".
 			[RT #42585]
 
-4517.	[placeholder]
+4517.	[security]	Named could mishandle authority sections that were
+			missing RRSIGs triggering an assertion failure.
+			(CVE-2016-9444) [RT # 43632]
 
 4516.	[bug]		isc_socketmgr_renderjson was missing from the
 			windows build. [RT #43602]
